Implementing Auth functionality

--- a/frontent/src/app/app.component.html
+++ b/frontent/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1 class="text-3xl font-bold underline text-amber-800">
-  Hello world!
-</h1>
+<p-toast
+  [preventOpenDuplicates]="true"
+  styleClass="app-overflow-wrap-anywhere"
+></p-toast>
+<router-outlet></router-outlet>
