Added route animation

--- a/frontent/src/app/app.component.html
+++ b/frontent/src/app/app.component.html
@@ -2,6 +2,9 @@
   [preventOpenDuplicates]="true"
   styleClass="app-overflow-wrap-anywhere"
 ></p-toast>
-<router-outlet></router-outlet>
-
+<div
+    [@routeTransition]="route.snapshot.data"
+    style="display: contents">
+  <router-outlet></router-outlet>
+</div>
 <app-loader></app-loader>
