Implementing Search users form

--- a/frontent/src/styles.css
+++ b/frontent/src/styles.css
@@ -4080,3 +4080,9 @@ select {
 
 @media (min-width: 1536px) {
 }
+
+.app-required-label::after {
+  color: red;
+  content: '*';
+  margin-left: 5px;
+}
