--- a/frontent/src/app/shared/components/results-table/results-table.component.css
+++ b/frontent/src/app/shared/components/results-table/results-table.component.css
@@ -65,3 +65,19 @@
   outline: 0;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.65);
 }
+
+
+
+::ng-deep .p-datatable-header{
+  --tw-bg-opacity: 1;
+  background-color: rgba(226, 232, 240, var(--tw-bg-opacity)) !important;
+}
+
+
+
+::ng-deep .p-paginator{
+  --tw-bg-opacity: 1;
+  background-color: rgba(226, 232, 240, var(--tw-bg-opacity)) !important;
+  color: black !important;
+}
+
