--- a/frontent/src/app/shared/components/results-table/results-table.component.css
+++ b/frontent/src/app/shared/components/results-table/results-table.component.css
@@ -66,7 +66,15 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.65);
 }
 
+::ng-deep .p-datatable-table-container {
+  --tw-bg-opacity: 1;
+  background-color: rgba(226, 232, 240, var(--tw-bg-opacity)) !important;
+}
 
+::ng-deep .p-datatable-table{
+  --tw-bg-opacity: 1;
+  background-color: rgba(226, 232, 240, var(--tw-bg-opacity)) !important;
+}
 
 ::ng-deep .p-datatable-header{
   --tw-bg-opacity: 1;
