Search users form

--- a/frontent/src/app/shared/components/results-table/results-table.component.css
+++ b/frontent/src/app/shared/components/results-table/results-table.component.css
@@ -89,3 +89,9 @@
   color: black !important;
 }
 
+::ng-deep .p-paginator-rpp-dropdown{
+  --tw-bg-opacity: 1;
+  background-color: rgba(226, 232, 240, var(--tw-bg-opacity)) !important;
+  color: black !important;
+}
+
