--- a/frontent/src/styles.css
+++ b/frontent/src/styles.css
@@ -29,6 +29,7 @@ Use a more readable tab size (opinionated).
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
+  --flow-spacer:1em;
 }
 
 /**
@@ -4085,4 +4086,8 @@ select {
   color: red;
   content: '*';
   margin-left: 5px;
+}
+
+:where(.flow :not(:first-child)){
+  margin-top: var(--flow-spacer,4em);
 }
