--- a/frontent/src/styles.css
+++ b/frontent/src/styles.css
@@ -4091,3 +4091,33 @@ select {
 :where(.flow :not(:first-child)){
   margin-top: var(--flow-spacer,4em);
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 300ms ease-in-out;
+}
+
+.fade-out {
+  animation: fadeOut 300ms ease-in-out;
+}
+
+::ng-deep .p-select-label {
+  color: black !important;
+}
