removed deprecated animations package

--- a/frontent/src/app/app.component.html
+++ b/frontent/src/app/app.component.html
@@ -1,6 +1,6 @@
 <p-toast
   [preventOpenDuplicates]="true"
-  styleClass="app-overflow-wrap-anywhere"
+  class="app-overflow-wrap-anywhere"
 ></p-toast>
 <div style="display: contents">
   <router-outlet #outlet="outlet"></router-outlet>
